# aptu

./: .commitlintrc.yml  .dockerignore  .gitignore  .gitleaks.toml  .goosehints  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Justfile  LICENSE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SPEC.md  action.yml  demo.tape  deny.toml  renovate.json
$HANDOFF/: 05-review-findings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/instructions/: pr-review.md
.github/workflows/: android-kmp.yml  build-and-attest.yml  ci.yml  codeql.yml  deploy-mcp.yml  ios-build.yml  ios-kmp.yml  issue-triage.yml  pr-review.yml  pr-triage.yml  release.yml  require-labels.yml  reuse.yml  scan.yml  scorecard.yml  test.yml  triage.yml
AptuApp/: .gitignore  ARCHIVED.md  AptuApp-Bridging-Header.h  project.yml
AptuApp/AptuApp/: AptuApp.swift  ContentView.swift  Info.plist  LoginView.swift
AptuApp/AptuApp/AptuCore/: .gitkeep
AptuApp/AptuApp/Components/: FlowLayout.swift  LabelBadge.swift
AptuApp/AptuApp/Constants/: AuthConstants.swift
AptuApp/AptuApp/Extensions/: Data+Base64URL.swift
AptuApp/AptuApp/Keychain/: SwiftKeychain.swift
AptuApp/AptuApp/Models/: AuthState.swift  FFIBridge.swift
AptuApp/AptuApp/Services/: GitHubAuthService.swift  OpenRouterAuthService.swift
AptuApp/AptuApp/Views/: AuthenticationView.swift  IssueDetailView.swift  IssueListView.swift  IssueRowView.swift  LoadingState.swift  OpenRouterAuthView.swift  RepositoryPickerView.swift
AptuApp/AptuAppTests/: AptuAppTests.swift  OpenRouterAuthServiceTests.swift
AptuApp/Scripts/: build-rust-ffi.sh
AptuKMP/: build.gradle.kts  gradle.properties  settings.gradle.kts
AptuKMP/.github/workflows/: android.yml  ios.yml
AptuKMP/androidApp/: build.gradle.kts  proguard-rules.pro
AptuKMP/androidApp/src/main/: AndroidManifest.xml
AptuKMP/androidApp/src/main/kotlin/dev/aptu/android/: AptuApplication.kt
AptuKMP/gradle/: libs.versions.toml
AptuKMP/shared/: build.gradle.kts
AptuKMP/shared/src/androidMain/kotlin/dev/aptu/shared/: KeychainProvider.android.kt
AptuKMP/shared/src/commonMain/kotlin/dev/aptu/shared/: AptuFfi.kt  KeychainProvider.kt
AptuKMP/shared/src/commonTest/kotlin/dev/aptu/shared/: KeychainProviderTest.kt
bench/: measure.sh  protocol.md  rubric.md
bench/results/: efficiency.json  scores.json  sizes.json
crates/aptu-cli/: Cargo.toml
crates/aptu-cli/src/: auth.rs  cli.rs  error.rs  errors.rs  history.rs  logging.rs  main.rs  output.rs  provider.rs
crates/aptu-cli/src/ai/: mod.rs  openrouter.rs
crates/aptu-cli/src/commands/: agent.rs  auth.rs  common.rs  completion.rs  create.rs  history.rs  issue.rs  mod.rs  models.rs  pr.rs  release.rs  repo.rs  scan_security.rs  triage.rs  types.rs
crates/aptu-cli/src/github/: graphql.rs  issues.rs
crates/aptu-cli/src/output/: auth.rs  bulk.rs  common.rs  create.rs  history.rs  issues.rs  mod.rs  models.rs  pr.rs  release.rs  repos.rs  table.rs  triage.rs
crates/aptu-cli/src/repos/: mod.rs
crates/aptu-cli/tests/: cli.rs
crates/aptu-core/: Cargo.toml  README.md
crates/aptu-core/benches/: security_scan.rs
crates/aptu-core/examples/: custom_token_provider.rs  list_repos.rs  test_registry.rs
crates/aptu-core/src/: ast_context.rs  auth.rs  bulk.rs  cache.rs  config.rs  error.rs  facade.rs  history.rs  lib.rs  metrics.rs  retry.rs  sanitize.rs  triage.rs  utils.rs
crates/aptu-core/src/ai/: cerebras.rs  circuit_breaker.rs  client.rs  context.rs  dep_enrichment.rs  gemini.rs  groq.rs  mod.rs  models.rs  openrouter.rs  provider.rs  registry.rs  review_context.rs  types.rs
crates/aptu-core/src/ai/prompts/: create_guidelines.md  create_schema.json  mod.rs  pr_label_guidelines.md  pr_label_schema.json  pr_review_guidelines.md  pr_review_schema.json  release_notes_guidelines.md  release_notes_schema.json  tooling_context.md  triage_guidelines.md  triage_schema.json
crates/aptu-core/src/ai/provider/: create.rs  http.rs  label.rs  mod.rs  parse.rs  review.rs  triage.rs
crates/aptu-core/src/config/: ai.rs  cache.rs  loader.rs  mod.rs  review.rs
crates/aptu-core/src/facade/: ai_client.rs  issues.rs  mod.rs  models.rs  pr_create.rs  pr_review.rs  repos.rs  revert.rs
crates/aptu-core/src/git/: mod.rs  patch.rs
crates/aptu-core/src/github/: auth.rs  graphql.rs  instructions.rs  issues.rs  mod.rs  pulls.rs  ratelimit.rs  releases.rs
crates/aptu-core/src/repos/: custom.rs  discovery.rs  mod.rs
crates/aptu-core/src/security/: cache.rs  detection.rs  ignore.rs  mod.rs  patterns.json  patterns.rs  sarif.rs  scanner.rs  types.rs  validator.rs
crates/aptu-core/tests/: patch_integration.rs  prompt_lint.rs  security_integration.rs
crates/aptu-core/tests/patch_fixtures/: simple.diff  simple.diff.license
crates/aptu-ffi/src/: error.rs  keychain.rs  lib.rs  types.rs
crates/aptu-mcp/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/aptu-mcp/src/: auth.rs  error.rs  lib.rs  main.rs  server.rs
crates/aptu-mcp/src/prompts/: review_checklist.md  triage_guide.md
crates/aptu-mcp/tests/: health.rs
data/: curated-repos.json
docs/: ARCHITECTURE.md  ASSURANCE.md  BENCHMARKS.md  CONFIGURATION.md  GITHUB_ACTION.md  MCP_SERVER.md  REPO-STANDARDS.md  ROADMAP.md  SECURITY_SCANNING.md  repo-standards.md  smoke-test.md
docs/testing/reports/: 2025-12-15-cli-test-report.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: parse_toml.rs
scripts/: build-ios.sh  fill-openssf-badge.ts  generate-swift-bindings.sh  package.json  tsconfig.json
snap/: snapcraft.yaml
src/: cli.rs  config.rs  error.rs  logging.rs  main.rs  output.rs
src/ai/: mod.rs  types.rs
src/commands/: auth.rs  history.rs  issues.rs  mod.rs  repo.rs  repos.rs  triage.rs  types.rs
src/github/: auth.rs  graphql.rs  issues.rs  mod.rs
src/repos/: mod.rs
tests/: integration.bats  test_helper.bash
tests/security_fixtures/safe/: safe_patterns.rs
tests/security_fixtures/vulnerable/: hardcoded_secrets.rs  sql_injection.rs
(+9 files in other folders)
