[workspace]
members = ["crates/*", "crates/aptu-ffi"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu"

[workspace.dependencies]
# Core
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# GitHub
octocrab = "0.44"
secrecy = "0.10"

# Error handling and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and storage
config = "0.14"
keyring = "3"
dirs = "5"

# User experience
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# FFI
uniffi = { version = "0.30", features = ["cli"] }

# Dev dependencies
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"
# Allow cfg(feature = "uniffi") even when the feature is not enabled
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"uniffi\"))"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Disable overly strict pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
