[workspace]
members = ["crates/*", "crates/aptu-ffi"]
resolver = "3"

[workspace.package]
version = "0.2.8"
edition = "2024"
rust-version = "1.92.0"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu"

[workspace.dependencies]
# Core
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.11"
backon = { version = "1", features = ["tokio-sleep"] }
futures = "0.3"

# GitHub
octocrab = "0.44"
secrecy = "0.10"

# Builder
bon = "3"

# Error handling and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and storage
config = { version = "0.15", default-features = false, features = ["toml"] }
keyring = "3"
dirs = "6"

# User experience
indicatif = "0.18"
dialoguer = "0.12"
console = "0.16"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# FFI
uniffi = { version = "0.30", features = ["cli"] }

# Dev dependencies
tokio-test = "0.4"
wiremock = "0.6"
assert_cmd = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"
# Allow cfg(feature = "keyring") even when the feature is not enabled
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"keyring\"))"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Disable overly strict pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
