[workspace]
members = ["crates/aptu-cli", "crates/aptu-core"]
resolver = "3"

[workspace.package]
version = "0.8.4"
edition = "2024"
rust-version = "1.95.0"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu"

[workspace.dependencies]
# Workspace-wide dependencies
toml = "1.0"
fastrand = "2"
percent-encoding = "2"
serial_test = "3.4.0"
tempfile = "3.27.0"
# Core
aptu-core = { path = "crates/aptu-core", version = "0.8.2" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "=0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.26"
backon = { version = "1", features = ["tokio-sleep"] }
futures = "0.3"
rayon = "1"
sha2 = "0.11"
hex = "0.4"
walkdir = "2"

# GitHub
octocrab = { version = "0.50", default-features = false, features = ["follow-redirect", "retry", "rustls", "timeout", "tracing", "default-client", "rustls-ring", "jwt-aws-lc-rs"] }
secrecy = "0.10"
zeroize = "1.8"

# Builder
bon = "3"

# Error handling and logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and storage
config = { version = "0.15", default-features = false, features = ["toml"] }
keyring-core = "1"
dirs = "6"

# User experience
indicatif = "0.18"
dialoguer = "0.12"
console = "0.16"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# FFI
uniffi = { version = "0.31.0" }

# Schemas
schemars = { version = "1.0" }

# Dev dependencies
tokio-test = "0.4"
assert_cmd = "2"
criterion = "0.8"
regex = "1"

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"
# Allow cfg(feature = "keyring") even when the feature is not enabled
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"keyring\"))"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Disable overly strict pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# async fn in traits is acceptable for internal traits not used as dyn
async_yields_async = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.ci]
inherits = "release"
lto = false
codegen-units = 256
panic = "unwind"
strip = false
