[package]
name = "aptu-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Aptu - Gamified OSS issue triage with AI assistance"
authors = ["Hugues Clouâtre"]
license = "MIT"
repository = "https://github.com/clouatre-labs/aptu"

[[bin]]
name = "aptu"
path = "src/main.rs"

[dependencies]
# Core library
aptu-core = { path = "../aptu-core" }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# User experience
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Security
secrecy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_cmd = { workspace = true }
predicates = "3.1"

[lints]
workspace = true
