[package]
name = "aptu-cli"
version = "0.1.1"
edition = "2024"
description = "CLI for Aptu - Gamified OSS issue triage with AI assistance"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu"

[[bin]]
name = "aptu"
path = "src/main.rs"

[dependencies]
# Core library
aptu-core = { path = "../aptu-core" }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# User experience
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Security
secrecy = { workspace = true }

# Paths
dirs = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_cmd = { workspace = true }
predicates = "3.1"

[package.metadata.deb]
maintainer = "Hugues Clouâtre <hugues@clouatre.dev>"
copyright = "2025 Hugues Clouâtre <hugues@clouatre.dev>"
license-file = ["../../LICENSE", "4"]
extended-description = """\
Aptu is a gamified CLI for OSS issue triage with AI assistance. \
It helps developers contribute meaningfully to open source projects \
through AI-assisted issue analysis and triage."""
section = "utility"
priority = "optional"
assets = [
  ["target/release/aptu", "usr/bin/", "755"],
  ["../../README.md", "usr/share/doc/aptu/", "644"],
  ["../../LICENSE", "usr/share/doc/aptu/", "644"]
]

[lints]
workspace = true
