[package]
name = "aptu-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Aptu - Gamified OSS issue triage with AI assistance"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "aptu"
path = "src/main.rs"

[dependencies]
# Core library
aptu-core = { path = "../aptu-core", version = "0.2", features = ["keyring"] }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# User experience
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
comfy-table = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Security
secrecy = { workspace = true }

# Paths
dirs = { workspace = true }

# Concurrency
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_cmd = { workspace = true }
predicates = "3.1"

[package.metadata.deb]
maintainer = "Hugues Clouâtre <hugues@linux.com>"
copyright = "2025 Hugues Clouâtre <hugues@linux.com>"
license-file = ["../../LICENSE", "4"]
extended-description = """\
Aptu is a gamified CLI for OSS issue triage with AI assistance. \
It helps developers contribute meaningfully to open source projects \
through AI-assisted issue analysis and triage."""
section = "utility"
priority = "optional"
assets = [
  ["target/release/aptu", "usr/bin/", "755"],
  ["../../README.md", "usr/share/doc/aptu/", "644"],
  ["../../LICENSE", "usr/share/doc/aptu/", "644"]
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/aptu-{ target }.tar.gz"
bin-dir = "aptu"
pkg-fmt = "tgz"

[lints]
workspace = true
