[package]
name = "aptu-core"
version = "0.1.1"
edition = "2024"
description = "Core library for Aptu - OSS issue triage with AI assistance"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP/API
reqwest = { workspace = true }
octocrab = { workspace = true }
secrecy = { workspace = true }
backon = { workspace = true }

# Configuration
config = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }

# History
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

[features]
default = []
# Enable UniFFI derive macros for FFI bindings (used by aptu-ffi)
uniffi = []

[lints]
workspace = true
