[package]
name = "aptu-core"
version.workspace = true
edition.workspace = true
description = "Core library for Aptu - OSS issue triage with AI assistance"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9"

# HTTP/API
reqwest = { workspace = true }
octocrab = { workspace = true }
secrecy = { workspace = true }
backon = { workspace = true }

# Configuration
config = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true, optional = true }

# History
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Builder
bon = { workspace = true }

# Regex for git URL parsing
regex = "1"

# URL encoding for tag names with special characters
percent-encoding = "2"

# Fuzzy string matching for model validation
strsim = "0.11"

[features]
default = []
# Enable system keyring for secure token storage
keyring = ["dep:keyring"]

[lints]
workspace = true
