[package]
name = "aptu-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for Aptu - OSS issue triage with AI assistance"
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
schemars = { workspace = true }
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP/API
reqwest = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
# Configuration
config = { workspace = true }
dirs = { workspace = true }
keyring-core = { workspace = true, optional = true }

# Optional: AST analysis for context injection
aptu-coder-core = { version = "0.22.0", optional = true }

# History
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
futures = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Builder
bon = { workspace = true }

# Random number generation
fastrand = { workspace = true }

# Regex for git URL parsing
regex = "1"

# URL encoding for tag names with special characters
percent-encoding = { workspace = true }

# Base64 encoding/decoding
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { version = "1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { version = "1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
backon = { version = "1", features = ["tokio-sleep"] }
octocrab = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "io-util"] }
backon = { version = "1" }
uuid = { version = "1", features = ["v4", "serde", "js"] }

[dev-dependencies]
criterion = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "security_scan"
harness = false

[features]
default = []
# Enable system keyring for secure token storage
keyring = ["dep:keyring-core"]
# Enable AST context injection for PR reviews
ast-context = ["dep:aptu-coder-core"]

[lints]
workspace = true
