# SPDX-License-Identifier: Apache-2.0

[package]
name = "aptu-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing aptu-core functionality for AI-powered GitHub triage and review"

[[bin]]
name = "aptu-mcp"
path = "src/main.rs"

[dependencies]
aptu-core = { path = "../aptu-core", version = "0.2" }
anyhow = { workspace = true }
axum = "0.8"
clap = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
