# SPDX-License-Identifier: Apache-2.0

[package]
name = "aptu-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server exposing aptu-core functionality for AI-powered GitHub triage and review"

[[bin]]
name = "aptu-mcp"
path = "src/main.rs"

[dependencies]
aptu-core = { path = "../aptu-core", version = "0.2" }
anyhow = { workspace = true }
axum = "0.8"
clap = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "=3.27.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{version}/aptu-mcp-{version}-{target}.tar.gz"
bin-dir = "aptu-mcp"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{version}/aptu-mcp-{version}-x86_64-unknown-linux-musl.tar.gz"

[package.metadata.deb]
maintainer = "Hugues Clouâtre <hugues@linux.com>"
copyright = "2025 Hugues Clouâtre <hugues@linux.com>"
license-file = ["../../LICENSE", "4"]
extended-description = """\
Aptu MCP server exposing aptu-core functionality \
for AI-powered GitHub issue triage and pull request review."""
section = "utility"
priority = "optional"
assets = [
  ["target/release/aptu-mcp", "usr/bin/", "755"],
  ["../../README.md", "usr/share/doc/aptu-mcp/", "644"],
  ["../../LICENSE", "usr/share/doc/aptu-mcp/", "644"]
]
